refactor: 新建/编辑数字员工时写入 KWEAVER_TOKEN
